--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,10 +1,10 @@
 
-<ion-content>
+<ion-content class="fondo">
   <div class="container d-flex h-100">
     <div class="d-flex m-auto">
       <ion-card>
         <ion-card-header class="text-center">
-        <img src="../../../assets/img/AdminApp.png" class="img-fluid" width="150px " alt="">
+        <img src="../../../assets/img/sushigada-logo-st.png" class="img-fluid" width="150px " alt="">
         </ion-card-header>
         <ion-card-content>
           <form [formGroup]="loginForm">
