--- a/src/app/pages/restaurant/restaurant.page.scss
+++ b/src/app/pages/restaurant/restaurant.page.scss
@@ -7,3 +7,7 @@
     background-color: rgba(32, 171, 141, 0.5);
     color: white!important;
 }
+
+ion-button{
+    --background: #ff9600 !important;
+}
