--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<ion-app class="fondo">
-  <ion-router-outlet>
+<ion-app>
+  <ion-router-outlet class="background-app">
   </ion-router-outlet>
   <app-footer></app-footer>
 </ion-app>
