--- a/src/app/pages/restaurant/restaurant.page.html
+++ b/src/app/pages/restaurant/restaurant.page.html
@@ -4,7 +4,7 @@
 
   <div class="container mt-5 ">
 
-      <h1 class="text-start pt-5">Restaurant</h1>
+      <h1 class="text-start pt-5">Restaurante</h1>
 
       <div class="container-fluid d-flex flex-column mt-3">
 
@@ -12,17 +12,17 @@
           <ion-row>
             <ion-col size="12" sizeMd="4">
               <ion-button (click)="select('cat')" style="width: 200px; color:white!important" class="mx-auto" expand="block"  shape="round">
-                Categories
+                Categorias
               </ion-button>
             </ion-col>
             <ion-col size="12" sizeMd="4">
               <ion-button (click)="select('prod')" style="width: 200px; color:white!important"  class="mx-auto" expand="block"  shape="round">
-                Products
+                Productos
               </ion-button>
             </ion-col>
             <ion-col size="12" sizeMd="4">
               <ion-button (click)="select('add')"  style="width: 200px; color:white!important"  class="mx-auto" expand="block"  shape="round">
-                Additionals
+                Adicionales
               </ion-button>
             </ion-col>
           </ion-row>
